# ollama-smart-proxy

./: .env.lightrag  .env.proxy  .gitignore  .gitmodules  DEBUGGING.md  DOCKER_SETUP.md  Dockerfile  LICENSE  README.md  benchmark.py  config.ini  config.json  debug_moa.py  docker-compose.yml  init-postgres.sql  load_and_visualize.py  load_benchmark_results.py  main.py  main_sim.py  pyproject.toml  test_load_results.py
.kilocode/rules/: specify-rules.md
.kilocode/workflows/: speckit.plan.md
.specify/memory/: constitution.md
docs/: moa_agent.md  moa_quick_start.md  quickstart.md
specs/: 001-seed.md  002-seed.md  003-seed.md  005-seed.md
specs/001/: plan.md  spec.md  tasks.md
specs/001-optimizer-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-optimizer-agent/checklists/: requirements.md
specs/001-optimizer-agent/contracts/: agent_contract.md
specs/002-db-abstraction/: plan.md  quickstart.md  spec.md  tasks.md
specs/002-db-abstraction/checklists/: requirements.md
specs/003-rag-plugin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-plugin/checklists/: requirements.md
specs/003-rag-plugin/contracts/: agent_contract.md
specs/005-moa-agent/: plan.md  spec.md  tasks.md
specs/005-moa-agent/checklists/: requirements.md
src/: const.py
src/benchmark/: __init__.py  concurrency_manager.py  constants.py  dataset_manager.py  exceptions  exceptions.py  latency_analyzer.py  models.py  ollama_benchmark.py  request_executor.py  request_session_manager.py  result_exporter.py  runner.py  visualization_generator.py
src/plugins/example_agent/: agent.py
src/plugins/moa/: README.md  __init__.py  agent.py  config.json  moa_config.py  models.py  multi_models_ranking_strategy.py  ranking_strategy.py  two_models_ranking_strategy.py
src/plugins/optimizer/: README.md  agent.py  batch_operations.py  config.json  const.py  db_utils.py  fingerprint_cache.py  (+5 more)
src/shared/: base_agent.py  config.py  config_manager.py  httpx_util.py  logging.py  ollama_client.py  plugin_registry.py
src/slices/: __init__.py  base_chain.py  base_router.py
tests/: conftest.py  test_const.py
tests/integration/: test_chat_slice.py  test_postgres_integration.py  test_sqlite_integration.py
tests/unit/: test_agent_chain.py  test_agent_streaming.py  test_base_chain_streaming.py  test_chat.py  test_config.py  test_database_factory.py  test_example_agent.py  test_generate_agent_chain.py  test_generate_router.py  test_health.py  test_logging.py  test_ollama_client.py  test_optimizer_agent.py  test_optimizer_agent.test.py  test_passthrough.py  test_plugin_registry.py  test_plugins.py  test_post_stream_processing.py  test_postgres_adapter.py  test_sqlite_adapter.py  test_template_repository.py
(+70 files in other folders)
