[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-smart-proxy"
version = "0.1.0"
description = "A lightweight proxy server for Ollama that exposes OpenAI-compatible APIs"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "ollama",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]
optimizer = [
    "psutil>=5.9.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"